# webgis-uebungen

./: .readthedocs.yaml  README.md  push.sh  setup.cfg
source/: conf.py  index.rst  rtd_requirements.txt
source/_static/: geo-python.css
source/_static/css/: custom.css
source/course-info/: abschlussaprojekt.rst  kursinfo.rst
source/gis-data/: download-osm-data.rst  ogc-standards.rst
source/gis-info/: einstellungen.rst  glossar.rst  hinweise.rst  intro_old.rst  was-ist-gis.rst
source/lessons/L0/: basemaps.rst  exercise-0.rst  installation.rst  uebung-0.rst
source/lessons/L1/: exercise-1-tectonicplates.rst  exercise-1-tectonicplates_additional.rst  exercise-1_germany.rst  overview.rst  uebung-0.rst  uebung-1.rst  uebung-1_optional.rst
source/lessons/L2/: exercise-2.rst  exercise-2_additional.rst  overview.rst  uebung-2.rst
source/lessons/L3/: exercise-3-esri-eb.rst  exercise-3-masterportal.rst  exercise-3-ms_entwicklung.rst  exercise-3-ms_layer.rst  exercise-3-ms_vorbereitung.rst  exercise-3-vs.rst  exercise-3-vulcanoes_additional.rst  exercise-3.rst  overview.rst
source/lessons/L4/: exercise-4.rst  exercise-4_ahrweiler.rst  ogc-services.rst  overview.rst  qgis-server.rst  qgis-server_intro.rst  qgis-server_v2.rst  qgis-server_v3.rst  qgis-server_v4.rst
source/lessons/L5/: daten_upload.rst  daten_vorbereiten.rst  datenbank.rst  digitalisieren.rst  exercise-5a.rst  exercise-5a_geologie.rst  exercise-5b-iceland.rst  geonode_intro.rst  georeferenzieren.rst  geoserver.rst  karte_erstellen.rst
source/modul-info/: info.rst  licensing.rst  resources.rst  theteam.rst
source/webgis-info/: datenorganisation.rst  koordinatensysteme.rst  probleme.rst
source/webiggis-info/: intro.rst  nutzeroberflaeche.rst  was-ist-webgis.rst
(+22 files in other folders)
