[metadata]
name = WebGIS
version = 2025
license = MIT
description = Lernumgebung für das Modul WebGIS
author = Mario Blersch
url = https://github.com/GeowazM/webgis-uebungen
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = GeowazM
github_repo = site